v4 (review javítás nélkül)

--- a/src/activity-gamma-tdk.tex
+++ b/src/activity-gamma-tdk.tex
@@ -18,7 +18,7 @@
 \newcommand{\vikkonzulensCVezeteknev}{}
 \newcommand{\vikkonzulensCKeresztnev}{}
 
-\newcommand{\vikcim}{Formal modeling and verification of process models in component-based reactive systems}
+\newcommand{\vikcim}{Formal Modeling and Verification of Process Models in Component-based Reactive Systems}
 \newcommand{\viktanszek}{\bmemit}
 \newcommand{\vikdoktipus}{\bsc}
 \newcommand{\vikmunkatipusat}{önálló labort}
@@ -37,15 +37,17 @@
 \begin{document}
 	
 \lstset {
-	frame=single,
+	frameshape={RYR}{Y}{Y}{RYR},
+	backgroundcolor = \color{white},
 	rulesepcolor=\color{black},
-	showspaces=false,showtabs=false,tabsize=2,
+	showspaces=false,showtabs=false,
+	tabsize=2,
 	numberstyle=\tiny,numbers=left,
 	stringstyle=\color{sh_string},
 	keywordstyle = \color{sh_keyword}\bfseries,
 	commentstyle=\color{sh_comment}\itshape,
 	captionpos=b,
-	xleftmargin=0.7cm, xrightmargin=0.5cm,
+	xleftmargin=0.7cm,
 	escapebegin={$$}, escapeend={$$}
 }
 
