--- a/src/content/activity-language/formal-definition.tex
+++ b/src/content/activity-language/formal-definition.tex
@@ -2,30 +2,30 @@
 \clearpage\section{Formal Definition}\label{sec:activity-formal-definition}
 %----------------------------------------------------------------------------
 
-\newcommand{\inflows}[1]{\ensuremath{\delta(#1)}}
-\newcommand{\outflows}[1]{\ensuremath{\Delta(#1)}}
-\newcommand{\sourcepin}[1]{\ensuremath{\phi(#1)}}
-\newcommand{\targetpin}[1]{\ensuremath{\Phi(#1)}}
-
-\todo{Finalise formalism}
+\newcommand{\inflows}[1]{\delta(#1)}
+\newcommand{\outflows}[1]{\Delta(#1)}
+\newcommand{\sourcepin}[1]{\phi(#1)}
+\newcommand{\targetpin}[1]{\Phi(#1)}
+\newcommand{\sourcenode}[1]{\theta(#1)}
+\newcommand{\targetnode}[1]{\Theta(#1)}
 
 In order to offer mathematical precision, formal verification methods require formally defined models with clear semantics. In this section I present the formal definition of the novel GAL formalism.
 
 \begin{definition}[Gamma Activity Language]
-	A Gamma Activity is a tuple of \(GA = (N, P, F, G, D, F_{Action})\), where:
+	A Gamma Activity is a tuple of \(\mathit{GA} = (N, P, F, G, D_\mathit{GA}, F_{Action})\), where:
 	
 	\begin{itemize}
-		\item \(N = N_\mathit{Initial} \bigcup N_\mathit{Final} \bigcup N_\mathit{Pseudo} \bigcup N_\mathit{Decision} \bigcup N_\mathit{Merge} \bigcup N_\mathit{Action} \) is a set of \emph{Nodes}, where \(N_\mathit{Initial}\) contains the \emph{Initial} nodes, \(N_\mathit{Final}\) contains the \emph{Final} nodes, \(N_\mathit{Pseudo}\) contains the \emph{Pseudo} nodes, \(N_\mathit{Decision}\) contains the \emph{Decision} nodes, \(N_\mathit{Merge}\) contains the \emph{Merge} nodes and \(N_\mathit{Action}\) contains the \emph{Action} nodes;
-		\item \( P \subseteq P_\mathit{In} \bigcup P_\mathit{Out} \) is a set of two types of pins, where \(P_\mathit{In} : N_\mathit{Action} \rightarrow \{ p_1, \dots, p_n \} \) and \(P_\mathit{Out} : N_\mathit{Action} \rightarrow \{ p_1, \dots, p_n \} \) are the set of \emph{InputPins} and \emph{OutputPins}, respectively, with domains \(\{ d_1, \dots, d_n \} \subseteq D \);
+		\item \(N = N_\mathit{IR} \bigcup N_\mathit{LAS} \) is a set of \emph{Nodes}, where \(N_\mathit{IR}\) contains the \emph{immediate-repeat} nodes and \(N_\mathit{LAS}\) contains the \emph{load-and-sand} nodes (see \autoref{ssec:activities-as-petri-nets}). \(F_\mathit{Action} \in N_\mathit{LAS} \) is a special set of nodes, which are the \emph{Action} nodes;
+		\item \( P \subseteq P_\mathit{In} \bigcup P_\mathit{Out} \) is a set of two types of pins, where \(P_\mathit{In} : N_\mathit{Action} \rightarrow \{ p_1, \dots, p_n \} \) and \(P_\mathit{Out} : N_\mathit{Action} \rightarrow \{ p_1, \dots, p_n \} \) are the set of \emph{InputPins} and \emph{OutputPins}, respectively, with domains \(\{ d_1, \dots, d_n \} \subseteq D_\mathit{GA} \);
 		\item \( F \subseteq F_C \bigcup F_D \), where \(F_C = \{ f_{C_1}, \dots, f_{C_n} \} \) and \(F_D = \{ f_{D_1}, \dots, f_{D_n} \} \) are the control and data flows, respectively. Let us denote the input/output flows of node \(n\) as \( \inflows{n} \) and \( \outflows{n} \), and the source/target pins of flow \(f\) as \( \sourcepin{f} \) and \(\targetpin{f}\). For any given node \(n\), \( \inflows{n} \neq \outflows{n} \) and for any given action node \(n_a\) \( \targetpin{f} \in P_\mathit{In}(n_a) \forall f \in F_D \bigcap \inflows{n_a} \) and \( \sourcepin{f} \in P_\mathit{Out}(n_a) \forall f \in F_D \bigcap \outflows{n_a} \) shall always hold. This means, that a flow cannot be input and output to the same node at the same time, and for a given action node, all input/output flows shall be associated with an input/output token, respectively;
 		\item \(G : F \rightarrow \{ \mathit{True}, \mathit{False} \} \) is a function determining whether a given flow is enabled;
-		\item \(D = \{ d_{1}, d_{2}, \dots, d_{n} \} \) is a set of value domains;
-		\item \(F_{Action} : N \rightarrow D \) is a function running the contained action, and returning it's result values.
+		\item \(D_\mathit{GA} = \{ d_{1}, d_{2}, \dots, d_{n} \} \) is a set of value domains;
+		\item \(F_{Action} \subseteq d_{1} \times d_{2} \times \dots \times d_{n} \) is a function mapping an \emph{action} nodes input pin values to it's output pin values.
 	\end{itemize}
 	
-Informally, Gamma Activities are composed of \emph{nodes} (\emph{Initial/Final}, \emph{Decision/Merge}, \emph{Action} and \emph{Pseudo}) and flows (\emph{Control} and \emph{Data}) in between them. A given action can also have any number of \emph{Pins} with a domain, for which, there must be one and only one \emph{data} flow connected to the node. An action node also has a special \(F_{Action}\), which implements its specific behaviour, and returns the values of its output pins.
+Informally, Gamma Activities are composed of \emph{nodes} and flows in between them. A given  \emph{Action} node may have any number of \emph{Pins} with domain \(d \in D\), for which, there must be one and only one flow connected to the node. An action node also has a special \(F_{Action}\), which returns the values of its output pins.
 
-For the most part, these elements have a similar behaviour as their SysML counter parts; however, there is a crucial difference regarding how a flow transmits a token. \autoref{fig:activity-data-flow1} shows a simple data flow between two nodes, connected via their pins. When this flow is fired, the data inside the pins are transferred instantly, without any pseudo-state in between. 
+\(N_\mathit{IR}\) contains the nodes \emph{decision/merge}, while \(N_\mathit{LAS}\) contains the nodes \emph{fork/join}, \emph{initial/final} and \emph{action} nodes. For the most part, these elements have a similar behaviour as their SysML counter parts; however, there is a crucial difference regarding how a flow transmits a token. \autoref{fig:activity-data-flow1} shows a simple data flow between two nodes, connected via their pins. When this flow is fired, the data inside the pins are transferred instantly, without any intermediate state in between. 
 
 \begin{figure}[!ht]
 	\centering
@@ -45,23 +45,160 @@ Contrarily, in Gamma Activity Language, the equivalent data flow does indeed con
 	
 \end{definition}\label{def:activity-structure}
 
-\begin{definition}[Gamma Activity State]
-	The state of a GA is defined the following:
+\subsection{Behaviour Formalism}
+
+The behaviour of the Gamma Activity Language is defined using the XSTS (\autoref{sec:xsts}) formalism:
+
+\begin{definition}[Gamma Activity Behaviour]
+	\( \mathit{XSTS_{GA}} = (D, V, V_C, \mathit{IV}, \mathit{Tr}, \mathit{In}, \mathit{En}) \), where:
 	
 	\begin{itemize}
-		\item \(S_N : N \rightarrow \{ \mathit{Idle}, \mathit{Running}, \mathit{Done} \} \) is a function returning the \emph{state} of a node;
-		\item \(S_F : F \rightarrow \{ \mathit{Empty}, \mathit{Full} \} \) is a function returning the \emph{state} of a flow;
-		\item \(V_N : N \rightarrow D \) is a function returning the current \emph{value} contained in a node;
-		\item \(\mathit{PV}_N : N \times P \rightarrow D \) is a function returning the current \emph{value} contained in a node's pin;
-		\item \(V_F : F \rightarrow D \) is a function returning the current \emph{value} contained in a flow.
+		\item \( D = D_\mathit{GA} \bigcup d_\mathit{NodeState} \bigcup d_\mathit{FlowState} \), where \(D_\mathit{GA}\) is the domain in \emph{GA}, \(d_\mathit{NodeState} = \{ \mathit{Idle}, \mathit{Running}, \mathit{Done} \} \) and \(d_\mathit{FlowState} = \{ \mathit{Empty}, \mathit{Full} \} \);
+		\item \( V = V_\mathit{NS} \bigcup V_\mathit{FS} \bigcup V_\mathit{NV} \bigcup V_\mathit{FV} \bigcup V_\mathit{PV} \), where \(V_\mathit{NS} = \{ v_1, v_2, \dots, v_n \} \) is the variable representing the \emph{state} of the nodes with domain \(d_\mathit{NodeState}\), \(V_\mathit{FS} = \{ v_1, v_2, \dots, v_n \} \) is the variable representing the \emph{state} of the flows with domain \(d_\mathit{FlowState}\) and \( V_\mathit{NV} \), \( V_\mathit{FV} \), \( V_\mathit{PV} \) are the variables representing the values contained inside \emph{flows}, \emph{nodes} and \emph{pins} respectively;
+		\item \( IV \) sets all variables to their default value;
+		\item \( V_C = V_\mathit{NS} \bigcup V_\mathit{FS} \) are the \emph{control variables}\footnote{We don't have to set the value variables as control variables, because they only change when the given flow's or node's state variable changes.};
+		\item \( \mathit{Tr} = T \), where \(T\) is the single transition defined down below;
+		\item \( \mathit{In} \) sets all values of variables associated with \emph{InitialNodes} to \emph{Running};
+		\item \( \mathit{En} = \emptyset \) is the empty environment transition, as simple activities do not have environments.
 	\end{itemize}
 	
 \end{definition}\label{def:activity-state}
 
-Informally, the state of Gamma Activities are determined by the nodes' \emph{state} (\emph{Idle}, \emph{Running}, \emph{Done}) and their (or their pins') values, the flows' \emph{state} (\emph{Empty}, \emph{Full}) and their values. For example, given an action node \(n\) and one of it's pins \(p_1\), \(\mathit{PV}_N(n, p)\) would give us the exact value that pin contains in this instance. This gives us the power - contrary to the Activity-PN mapping introduced in \autoref{ssec:activities-as-petri-nets} - to formally define the values contained in tokens and nodes.
+We also define the following helper functions:
 
-\begin{definition}[State Transition Functions] 
-	The behaviour of the system is described by three functions (\(F_{In}\), \(F_{Run}\) and \(F_{In}\)). At any one time, a node \(n \in N\) is selected, and an \emph{enabled} function is executed non-deterministically. These functions define the state-transitions for our system:
+\begin{itemize}
+	\item \(S_N : N \rightarrow V_\mathit{NS} \) is a function that returns the \emph{state variable} of a node;
+	\item \(S_F : N \rightarrow V_\mathit{FS} \) is a function that returns the \emph{state variable} of a flow;
+	\item \(V_{N_\mathit{In}} : N \times F \rightarrow V_\mathit{NV} \) is a function that returns the \emph{input value variable} of a node regarding a specific connected flow;
+	\item \(V_N : N \rightarrow V_\mathit{NV} \) is a function that returns the \emph{value variable} of a node;
+	\item \(V_F : F \rightarrow V_\mathit{FV} \) is a function that returns the \emph{value variable} of a flow;
+	\item \(\mathit{PV}_N : N \times P \rightarrow V_\mathit{PV} \) is a function returning the \emph{value variable} of a pin inside a node.
+\end{itemize}
+
+Informally, the state of Gamma Activities are determined by the nodes' \emph{state} (\emph{Idle}, \emph{Running}, \emph{Done}), the nodes' and their pins' values, the flows' \emph{state} (\emph{Empty}, \emph{Full}) and their values. For example, given an action node \(n\) and one of it's pins \(p_1\), \(\mathit{PV}_N(n, p)\) would give us the exact value that pin contains in this instance. This gives us the power - contrary to the Activity-PN mapping introduced in \autoref{ssec:activities-as-petri-nets} - to formally define the values contained in tokens.
+
+Let us define a shorthand function for finding a nodes input variable associated with a given flow:
+
+\begin{equation*}
+	V_{N_\mathit{In}}(n, f) = 
+	\begin{cases}
+		\mathit{PV}_N(n, \targetpin{f}) & \text{if } n \in N_{Action} \\
+		V_N(n), & \text{otherwise}
+	\end{cases}
+\end{equation*}
+
+And a shorthand function for finding a nodes output variable associated with a given flow:
+
+\begin{equation*}
+	V_{N_\mathit{Out}}(n, f) = 
+	\begin{cases}
+		\mathit{PV}_N(n, \sourcepin{f}) & \text{if } n \in N_{Action} \\
+		V_N(n), & \text{otherwise}
+	\end{cases}
+\end{equation*}
+
+These notation will help us easily transfer the data to and from the node value variables - by hiding the difference between the pin variables and the node variables.
+
+\newcommand{\enabled}{\mathit{En}}
+
+In the following I define the operations used to construct the transitions in the transition set \(T\). 
+
+\begin{definition}[Flow Transition Operations]	
+	Let us denote the source/target node of flow \(f\) as \( \sourcenode{f} \) and \( \targetnode{f} \) respectively. Let us also construct the operation of  \(O_\mathit{FlowIn}(f)\) is the \emph{sequential} operation of taking a token from a flow to a node, which is defined the following:
+	
+	\begin{align*}
+		&\mathit{assume}(S_F(f) = \mathit{Full}) \\
+		&\mathit{assume}(S_N(\targetnode{f}) = \mathit{Idle}) \\
+		&\mathit{assign}(S_F(f), \mathit{Empty}) \\
+		&\mathit{assign}(S_N(\targetnode{f}), \mathit{Running}) \\
+		&\mathit{assign}(S_N(V_{N_\mathit{In}}(\targetnode{f}, f)), V_F(f)) \\
+	\end{align*}
+
+	Informally, this operation checks that the node is \emph{Idle} and the flow is \emph{Full}, in which case it transfers the token by changing their states. Let \(O_\mathit{FlowOut}(f)\) be the \emph{sequential} operation of taking a token from a node to a flow:
+	
+	\begin{align*}
+		&\mathit{assume}(G(f) = \mathit{true}) \\
+		&\mathit{assume}(S_F(f) = \mathit{Empty}) \\
+		&\mathit{assume}(S_N(\sourcenode{f}) = \mathit{Done}) \\
+		&\mathit{assign}(S_F(f), \mathit{Full}) \\
+		&\mathit{assign}(S_N(\sourcenode{f}), \mathit{Idle}) \\
+		&\mathit{assign}(V_F(f), S_N(V_{N_\mathit{Out}}(\sourcenode{f}, f))) \\
+	\end{align*}
+
+	Informally, this operation checks that the node is \emph{Done} and the flow is \emph{Empty} and \emph{enabled}, in which case it transfers the token by changing their states.
+\end{definition}
+
+\begin{definition}[Node Token In/Out Operations]
+	Given the different behaviours of \emph{IR} and \emph{LAS} nodes, we must construct different operations for their in and out transitions. \(O_\mathit{IRNodeIn}(n)\) is the \emph{choice} operation representing the \enquote{token intake} of an \emph{IR} node:
+	
+	\begin{equation*}
+		O_\mathit{IRNodeIn}(n) = \mathit{choice}\left(\bigcup_{f \in \inflows{n}} O_\mathit{FlowIn}(f)\right)
+	\end{equation*}
+	
+	And \(O_\mathit{IRNodeOut}(n)\) is the \emph{choice} operation representing the \enquote{token output} of an \emph{IR} node:
+
+	\begin{equation*}
+		O_\mathit{IRNodeOut}(n) = \mathit{choice}\left(\bigcup_{f \in \outflows{n}} O_\mathit{FlowOut}(f)\right)
+	\end{equation*}
+
+	On a similar note, the \emph{LAS} node \enquote{token intake} and \enquote{token output} operations are the following:
+	
+	\begin{align*}
+		O_\mathit{LASNodeIn}(n) &= \mathit{parallel}\left(\bigcup_{f \in \inflows{n}} O_\mathit{FlowIn}(f)\right)\\
+		O_\mathit{LASNodeOut}(n) &= \mathit{parallel}\left(\bigcup_{f \in \outflows{n}} O_\mathit{FlowOut}(f)\right)
+	\end{align*}
+
+	For simplicities sake, I define the following operations to use one notation for all of the node operations:
+
+	\begin{align*}
+		O_\mathit{LASNodeIO}(n) &= \mathit{choice}(O_\mathit{LASNodeIn}(n) \bigcup O_\mathit{LASNodeOut}(n))\\
+		O_\mathit{IRNodeIO}(n) &= \mathit{choice}(O_\mathit{IRNodeIn}(n) \bigcup O_\mathit{IRNodeOut}(n))\\
+		O_\mathit{NodeIO}(n) &= 
+		\begin{cases}
+			O_\mathit{IRNodeIO}(n) & \text{if } n \in N_{IR} \\
+			O_\mathit{LASNodeIO}(n), & \text{otherwise}
+		\end{cases}
+	\end{align*}
+
+	In which case, \(O_\mathit{NodeIO}(n)\) returns an operation transferring the tokens in and out of the specified node.
+
+\end{definition}
+
+Informally, these operations realise the semantics of the \emph{LAS} and \emph{IR} nodes, by either putting the \emph{flow in} and \emph{flow out} operations inside a \emph{parallel} or a \emph{choice}, respectively\footnote{Parallel operations execute \emph{all} contained operations at the same time, while choices chose one at random.}.
+
+\begin{definition}[Node Transition Operations]
+	Node transition operations take the given node from \emph{Running} state to \emph{Done} state, while also executing the underlying operation. Let us define the \(O_\mathit{NodeTransition}(n)\) node transition \emph{sequential} operation function as:
+	
+	\begin{align*}
+		&\mathit{assume}(S_N(n), \mathit{Running}) \\
+		&\mathit{assign}(S_N(n), \mathit{Done}) \\
+	\end{align*}
+\end{definition}
+
+\begin{definition}[Composite Node Operation]
+	Putting all of the work together, we can define a function returning an operation for each node, that implements the behaviour we desire:
+	
+	\begin{equation*}
+		O_\mathit{Node}(n) = \mathit{choice}(O_\mathit{NodeIO}(n) \bigcup O_\mathit{NodeTransition}(n))
+	\end{equation*}
+\end{definition}
+
+
+\iffalse
+
+\begin{definition}
+	
+\begin{itemize}
+	\item Transition \( T_\mathit{In} \) \enquote{takes} the token(s) from the incoming flow(s), and puts them/it onto the selected node \(n \in N\). The operation of the transition depends on the type of the selected node:
+	\begin{itemize}
+		\item If the selected node \(n \in N\) is an \emph{IR} node (\(n \in N_\mathit{IR}\)), then the operation is a \emph{choice} operation, containing the following \emph{sequential} operations: \( \emph{seq}_n = \{ assume(S_F(f_n) = \mathit{Full} \wedge S_N(n) = \mathit{Idle});  ) \} \) \( T_\mathit{In} \) is a \emph{choice} upon execution one contained transition is selected and executed nondeterministically.
+		\item If the selected node \(n \in N\) is a \emph{LAS} node (\(n \in N_\mathit{LAS}\)), upon execution all contained transitions are executed.
+		\item If \(n \in N_\mathit{IR} \), the enabling function \( \enabled(T_\mathit{In}) \) returns \( \exists f \in \inflows{n} : S_F(f) = \mathit{Full} \). When the transition is executed, a flow is selected arbitrary: \(f f \in \inflows{n} : S_F(f) = \mathit{Full} \) and the next states become: \( S_F^\prime(f) = \mathit{Empty} \), \( S_N^\prime(n) = \mathit{Running} \).
+	\end{itemize}
+	\item Transition \( T_\mathit{Run} \) \enquote{runs} the operation associated with the given node, after which the next state is defined as: \(S_N^\prime(n) = \mathit{Done}\). 
+\end{itemize}
+
+leírom a state transition function-t, amely egy állapotból a következőbe visz. Utána ir-las node-ok-hoz a különböző szemantikák (fin 2, fout 2, frun 1), valamint a token átviteli függvény (control flow vs data flow). itt majd vissza kell utalni a background-ba, úgyhogy előbb azt kell megcsinálni.
 
 \begin{equation}
 	F_{In} : N \rightarrow
@@ -141,9 +278,18 @@ The function \(F_{Our}\) takes the token from node, and puts it in its output fl
 
 \autoref{fig:activity-state-function} depicts these three functions, and how they change the state of a given node.
 
+\fi
+
 \begin{figure}[!ht]
 	\centering
 	\includesvg[inkscapelatex=false, width=110mm, keepaspectratio]{activity-state-function}
 	\caption{An illustration of activity node state and change functions}
 	\label{fig:activity-state-function}
+\end{figure}
+
+\begin{figure}[!ht]
+	\centering
+	\includesvg[inkscapelatex=false, width=110mm, keepaspectratio]{activity-state-function-ir}
+	\caption{An illustration of activity node state and change functions}
+	\label{fig:activity-state-function-ir}
 \end{figure}
