--- a/src/content/background.tex
+++ b/src/content/background.tex
@@ -2,7 +2,7 @@
 \chapter{Background}\label{ch:background}
 %----------------------------------------------------------------------------
 
-In this chapter I present the foundations of this work. In \autoref{sec:mbse} I introduce the concept of model-based systems engineering, which is a well known approach for complex system design. This section also goes into detail about SysML as well (\autoref{ssec:sysml}), which is a widely used \emph{systems modeling language}. Next, I talk about the concept of formal verification in \autoref{sec:formal_verification}, and introduce Petri nets (\autoref{ssec:petri-net}) and a mapping between activities and Petri nets (\autoref{ssec:activities-as-petri-nets}). Lastly, I introduce the Gamma Statechart Composition Framework, which is a tool for modeling and verifying composite systems using statechart behaviours \autoref{sec:gamma}, and a low-level formalism called XSTS (\autoref{sec:xsts}), used as an intermediary language for model checking by Gamma.
+In this chapter I present the foundations of this work. In \autoref{sec:mbse}, I introduce the concept of model-based systems engineering, which is a well known approach for complex system design. This section also goes into detail about SysML as well (\autoref{ssec:sysml}), which is a widely used \emph{systems modeling language}. Next, I talk about the concept of formal verification in \autoref{sec:formal_verification}, and introduce Petri nets (\autoref{ssec:petri-net}) and a mapping between activities and Petri nets (\autoref{ssec:activities-as-petri-nets}). Lastly, I introduce the Gamma Statechart Composition Framework, which is a tool for modeling and verifying composite systems using statechart behaviours (\autoref{sec:gamma}), and a low-level formalism called XSTS (\autoref{sec:xsts}), used as an intermediary language for model checking by Gamma.
 
 \input{content/background/engineering-models}
 %\input{content/background/mbse-verification}
