--- a/src/content/background/gamma.tex
+++ b/src/content/background/gamma.tex
@@ -62,10 +62,12 @@ statechart TrafficLightCtrl [
 			region interrupted {
 				initial Entry1
 				state Black {
-					entry / set BlackTimeout4 := 500 ms; raise LightCommands.displayNone;
+					entry / set BlackTimeout4 := 500 ms; 
+						raise LightCommands.displayNone;
 				}
 				state BlinkingYellow {
-					entry / set BlinkingYellowTimeout3 := 500 ms; raise LightCommands.displayYellow;
+					entry / set BlinkingYellowTimeout3 := 500 ms; 
+						raise LightCommands.displayYellow;
 				}
 			}
 		}
