--- a/src/include/packages.tex
+++ b/src/include/packages.tex
@@ -70,6 +70,7 @@
 \usepackage{subcaption}
 \usepackage{xcolor}
 \usepackage{algorithm2e}
+\usepackage{fancyvrb}
 
 \lstdefinelanguage{Xtext}{
 	morekeywords={grammar, with, hidden, generate, as, import, returns, current, terminal, enum},
