--- a/src/content/activity-language.tex
+++ b/src/content/activity-language.tex
@@ -2,9 +2,9 @@
 \chapter{Gamma Activity Language}\label{ch:gamma-activity-language}
 %----------------------------------------------------------------------------
 
-The high-level nature of SysML activities means they are easy to model complicated behaviours of distributed system, but leads to an increasingly hard time trying to run formal verification on them. As discussed above in \autoref{ssec:activities-as-petri-nets}, we can define a mapping between activities and Petri nets (which have exact semantics), however, that mapping is not exhaustive, as it disregards the data contained in tokens.
+The high-level nature of SysML activities means they are easy to use for modeling complicated behaviours of distributed system, but their complexity encumbers formal verification. As discussed above in \autoref{ssec:activities-as-petri-nets}, we can define a semantic-preserving mapping between activities and Petri nets (which have a formal semantics), however, that mapping is not complete, as it disregards the data contained in tokens.
 
-The pre-existing Gamma Statechart Composition Framework (\autoref{sec:gamma}) implements this transformation-verification pipeline, however, it does not include activity diagrams. For this reason, I propose (\autoref{ch:gamma-activity-language}) the \emph{Gamma Activity Language}, and integrate it (\autoref{ch:activiy_verification}) into the pipeline shown in \autoref{fig:gamma-overview}.
+The Gamma Statechart Composition Framework (\autoref{sec:gamma}) implements a model transformation pipeline (see \autoref{fig:gamma-overview}) for the formal verification of collaborating statecharts, however, it does not include activity diagrams. For this reason, I propose the \emph{Gamma Activity Language} (\autoref{ch:gamma-activity-language}), and integrate it (\autoref{ch:activiy_verification}) into the transformation pipeline.
 
 \input{content/activity-language/design-decisions}
 \input{content/activity-language/formal-definition}
