--- a/src/content/activity-language/design-decisions.tex
+++ b/src/content/activity-language/design-decisions.tex
@@ -2,22 +2,20 @@
 \section{Language Design}
 %----------------------------------------------------------------------------
 
-Every language starts with defining exactly what we want our language to accomplish. With the Activity Language, this was the following: it should support as much features from SysML activity diagrams as possible, all the while being simple to implement and transform to low-level models. As you could see from the \autoref{ssec:activities-as-petri-nets}, SysML activity diagrams cannot be exactly transformed to a formal model; we have to constrain our language in order to offer formal semantics. However, as you will see, these constrains still allow us to write \emph{almost} all activities.
+The purpose of the Gamma Activity Language is the following: it should support as many features from SysML activity diagrams as possible, while also being simple to implement and transform to low-level models. \todo{Ezt a részt át kéne írni} As you could see from the \autoref{ssec:activities-as-petri-nets}, SysML activity diagrams cannot be exactly transformed to a formal model; we have to constrain our language in order to offer formal semantics. However, as you will see, these constrains still allow us to write \emph{almost} all activities.
 
-\subsection{Constrains}
+\subsection{Constraints}
 
 Compared to SysML activity diagrams, Activity Language has the following constrains:
 
 \begin{itemize}
-	\item No \emph{flow final} nodes.
-	\item No \emph{receive signal} nodes.
-	\item No \emph{interrupt} flows.
-	\item Flows may only contain \emph{one} token at a given time.
-	\item Activities can only be inside \emph{statecharts}, cannot describe a component's behaviour in itself
+	\item The model cannot contain \emph{flow final} nodes.
+	\item The model cannot contain \emph{receive signal} nodes.
+	\item The model cannot contain\emph{interrupt} flows.
+	\item Flows may contain only \emph{one} token at a given time.
+	\item Activities must be contained by \emph{statecharts}, as they cannot describe a component's behaviour in themself.
 \end{itemize}
 
-As you can see, most of these constrains can be substituted with other constructs, and just serve as \emph{shorthands}. The absence of \emph{flow final} nodes can be resolved by merging all flows into one single \emph{activity final} node. These steps could be done automatically using model transformation from SysML to Activity.
-
-\subsection{Improvement over Petri net mapping}
+\subsection{Improvement over Petri Net Mapping}
 
 Compared to the Petri net mapping introduced in \autoref{ssec:activities-as-petri-nets}, the Activity Language supports guards, valued tokens, actions and composite activities.
