--- a/src/content/activity-language/dsl.tex
+++ b/src/content/activity-language/dsl.tex
@@ -1,12 +1,12 @@
 %----------------------------------------------------------------------------
-\clearpage\section{Domain-specific Language}
+\clearpage\section{Language Gramar}
 %----------------------------------------------------------------------------
 
-Like the Gamma Statechart Language, the Gamma Activity Language is intended to be a first-class citizen in the Gamma Framework, thus it must have a domain-specific language to represent in a textual way. This implementation draws highly from the SysMLv2 \cite{omg_sysml_v2} language design, while also fitting into the already existing language family of Gamma (\autoref{sec:gamma}).
+Similarly to the Gamma Statechart Language, the Gamma Activity Language is intended to be a first-class citizen in the Gamma Framework, thus it must have a grammar to represent in a textual way. This implementation incorporates elements from the SysMLv2 \cite{omg_sysml_v2} language design, while also fitting into the already existing language family of Gamma (\autoref{sec:gamma}).
 
-\subsection{Meta-model}
+\subsection{Metamodel}
 
-Due to the complexity of the final meta-model of the language, I have split it into multiple parts for easier understanding.
+Due to the complexity of the final meta-model of the language, I have split it into multiple parts for easier understanding.\
 
 \subsubsection{Pins}\label{ssec:pins}
 
