--- a/src/content/activity-model-verification/state-model.tex
+++ b/src/content/activity-model-verification/state-model.tex
@@ -4,8 +4,6 @@
 
 Because Gamma transforms its models to XSTS in order to run formal verification on them, to integrate activity language, it must also be transformed to XSTS. Luckily, the structure and behaviour of the activity formalism makes this transformation easy.
 
-\subsection{Structure Transformation}
-
 The state of the activities (\autoref{def:activity-state}) are defined by the nodes' \emph{states} and \emph{values}, it's pins' \emph{values} and the flows' \emph{states} and \emph{values}. All of these can be represented using \emph{variables} in the XSTS formalism. Because XSTS variables and types must have unique names, the name of the variables must be derived from their containers. In the following I will show the transformation algorithm using the XSTS's textual representation for easier understanding.
 
 The transformations steps are:
@@ -40,7 +38,15 @@ var activity_decision_value : boolean = false
 
 \paragraph{Step Three} 
 
-Now that we have mapped the state of the activity, we must map the state-transition functions. This 
+Now that we have mapped the state of the activity, we must map the state-transition functions defined in \autoref{def:activity-state-change}. All state transition functions defined have a \emph{precondition}, after which the state variables are \emph{given} a new value. In the resulting XSTS, preconditions are mapped to \emph{assume} operations, which is put into a sequential operation. 
+
+\begin{lstlisting}[language=xsts]
+assume ((activity_flow == __Empty__) && (activity_node == __Done__));
+activity_flow := __Full__;
+activity_node := __Idle__;
+\end{lstlisting}
+
+
 
 \begin{lstlisting}[language=xsts]
 assume ((activity_flow == __Empty__) && (activity_node == __Done__));
